--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,6 +44,14 @@
   cursor: pointer;
 }
 
+.load-data-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  background-color: #4a7e61;
+  width: 100%;
+  height: 100%;
+}
 
 @keyframes App-logo-spin {
   from {
